@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940729
+MANIFEST for ded, version t19940802
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
